--- a/action.yml
+++ b/action.yml
@@ -1,11 +1,14 @@
-name: "Pull Request Changelog Generator"
+name: "PR Changelog Generator"
 description: "Github action that creates a changelog on opening or updating the PR"
-author: "etc-tiago"
+author: "Bala-raj"
 branding:
   icon: "git-pull-request"
   color: "green"
 inputs:
   token:
+    required: true
+    description: "As provided by Github Actions"
+  branch:
     required: true
     description: "As provided by Github Actions"
 runs:
