added outputs mapping

--- a/action.yml
+++ b/action.yml
@@ -11,6 +11,14 @@ inputs:
   branch:
     required: true
     description: "As provided by Github Actions"
+outputs:
+  next-version:
+    description: "Next bumped version"
+    value: ${{ steps.change-logs.outputs.next-version }}
+  content:
+    description: "Changes logs content"
+    value: ${{ steps.change-logs.outputs.content }}
 runs:
   using: "node12"
   main: "dist/index.js"
+  id: "change-logs"
